# yttrium-bot

./: .gitignore  Cargo.toml  README.md  cross-compile.md
migrations/: 20210128110629_data.sql  data.sql
src/: bot_events.rs  commands.rs  databases.rs  main.rs  match_engine.rs  triggermanager.rs  triggers.rs  types.rs  utilities.rs
