[package]
name = "yttrium-bot"
version = "0.1.0"
authors = ["adamski234 <adamski234@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

yttrium = { git = "https://github.com/adamski234/yttrium" }
yttrium_key_base = { git = "https://github.com/adamski234/yttrium" }
serenity = "0.10"
futures = "0.3"
regex = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }